# aiq

./: .gitignore  README.md  demo.tape  pyproject.toml
docs/: demo.md  demo.tape  user-workflow.md
src/aiq/cli/: __init__.py  agent.py  daemon.py  group.py  main.py  model.py  task.py
src/aiq/codegen/: script.py
src/aiq/daemon/: app.py  scheduler.py
src/aiq/daemon/routes/: agents.py  groups.py  models.py  tasks.py
src/aiq/models/: schema.py
src/aiq/state/: __init__.py  store.py
tests/: conftest.py  test_cli.py  test_codegen.py  test_routes_agents.py  test_routes_groups.py  test_routes_models.py  test_routes_tasks.py  test_scheduler.py  test_schema.py  test_store.py
