[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiq"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "typer>=0.12",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "pydantic>=2.7",
    "tomli-w>=1.0",
    "rich>=13.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
aiq = "aiq.cli.main:app"
aiqd = "aiq.daemon.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aiq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
